# agentsdk-rs

./: Cargo.toml  PORTING_GUIDE.md  README.md  agents_sdk.md  agents_sdk_documentation.md  implementation_plan.md  research.md  rust_interface.md
examples/: README.md
examples/basic/: context_tool.rs  guardrails.rs  hello_world.rs  multiple_tools.rs  tools.rs  tools_simple.rs
examples/handoffs/: README.md  message_filter.rs  simple_handoff.rs
src/: agent.rs  guardrail.rs  handoff.rs  lib.rs  runner.rs  tool.rs  utils.rs
src/model/: mock.rs  mod.rs  openai.rs  provider.rs  settings.rs
src/tracing/: mod.rs  processors.rs  span.rs  trace.rs
src/types/: context.rs  error.rs  message.rs  mod.rs  result.rs
